# cloud-rust-example

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
tests/: integration_tests.rs
