[package]
name = "cloud-rust"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.1"
google-cloud-resourcemanager-v3 = { version = "1.3.0"}
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.10"
serde_json = "1.0"

