[package]
name = "cloud-rust"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.1"
google-cloud-resourcemanager-v3 = { version = "1.7.0"}
reqwest = "0.13.1"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
rstest = "0.26"
tempfile = "3.27"

